--- a/main.css
+++ b/main.css
@@ -1,47 +1,76 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 1.3px;
   font-weight: lighter;
+  width: 100%;
 }
 
 input, input[list]::-webkit-input-placeholder {
-   font-family: 'Open Sans', sans-serif;
+   font-family: 'Roboto', sans-serif;
    font-size: 18px;
 }
 
 input, input[list]:-moz-placeholder { /* Firefox 18- */
-   font-family: 'Open Sans', sans-serif;
+   font-family: 'Roboto', sans-serif;
    font-size: 18px;
 }
 
 input, input[list]::-moz-placeholder {  /* Firefox 19+ */
-   font-family: 'Open Sans', sans-serif;
+   font-family: 'Roboto', sans-serif;
    font-size: 18px;
 }
 
 input, input[list]:-ms-input-placeholder {  
-   font-family: 'Open Sans', sans-serif;
+   font-family: 'Roboto', sans-serif;
    font-size: 18px;
 }
 
 button {
-   font-family: 'Open Sans', sans-serif;
+   font-family: 'Roboto', sans-serif;
    font-size: 18px;
    color: #707070;
 }
 
+.top-logo {
+  position: absolute;
+  height: auto;
+  width: 125px;
+  padding-left: 485px;
+  padding-right: 485px;
+  margin: auto;
+  margin-top: 10px;
+
+}
+
 #vis {
-  width: 100%;
+  min-width: 1100px;
   height: 750px;
   position: absolute;
   display: inline;
   margin: auto;
   text-align: center;
+  width: 100%;
 
   background: rgb(136, 61, 210); /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(180deg, rgb(136, 61, 210), rgb(40, 141, 208)); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(180deg, rgb(136, 61, 210), rgb(40, 141, 208)); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(180deg, rgb(136, 61, 210), rgb(40, 141, 208)); /* For Firefox 3.6 to 15 */
   background: linear-gradient(180deg, rgb(136, 61, 210), rgb(40, 141, 208)); /* Standard syntax */
+}
+
+#vis h4 {
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  min-width: 1100px;
+  position: absolute;
+  width: 100%;
+  margin: auto;
+  margin-top: 100px;
+}
+
+svg {
+  margin-top: 150px;
 }
 
 .link {
@@ -84,6 +113,7 @@ h4 {
 
 .bottom-banner {
   width: 100%;
+  min-width: 1100px;
   height: 175px;
   position: absolute;
   top: 1248px;
@@ -92,8 +122,7 @@ h4 {
   font-size: 30px;
   letter-spacing: .5px;
   line-height: 175px;
-  padding-left: 160px;
-
+  
   background: rgb(136, 61, 210); /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(100deg, rgb(40, 141, 208), rgb(155,219,81)); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(100deg, rgb(40, 141, 208), rgb(155,219,81)); /* For Opera 11.1 to 12.0 */
@@ -101,8 +130,15 @@ h4 {
   background: linear-gradient(100deg, rgb(40, 141, 208), rgb(155,219,81)); /* Standard syntax */
 }
 
+.bottom-banner h1 {
+  color: white;
+  padding-left: 160px;
+  line-height: 150px;
+}
+
 .thin-banner {
   width: 100%;
+  min-width: 1100px;
   height: 7px;
   position: absolute;
   top: 1870px;
@@ -118,10 +154,25 @@ h4 {
   position: absolute;
   height: 400px;
   width: 100%;
+  min-width: 1100px;
   top: 1423px;
-  padding-left: 160px;
+  
   padding-top: 50px;
   background-color: #f2f2f2;
+}
+
+.email-form a {
+  color: #96d856;
+  text-decoration: none;
+}
+
+form {
+  padding-left: 160px;
+}
+
+.email-form h1, .email-form h4 {
+  padding-left: 160px;
+  margin-right: 100px;
 }
 
 input {
@@ -170,11 +221,12 @@ input[type=checkbox]
 
 .its-a-brand {
   display: inline;
-  margin-left: 5px;
+  margin-left: -155px;
 }
 
 .bottom-brands {
   width: 100%;
+  min-width: 1100px;
   height: 300px;
   position: absolute;
   top: 1877px;
@@ -182,6 +234,7 @@ input[type=checkbox]
 
 .footer {
   width: 100%;
+  min-width: 1100px;
   height: 200px;
   position: absolute;
   top: 2177px;
