--- a/main.css
+++ b/main.css
@@ -155,6 +155,14 @@ h4 {
   line-height: 150px;
 }
 
+.bottom-banner-logo {
+  height: auto;
+  width: 150px;
+  position: absolute;
+  margin-left: 825px;
+  margin-top: -150px;
+}
+
 .thin-banner {
   width: 100%;
   min-width: 1100px;
@@ -246,13 +254,20 @@ input[type=checkbox]
   top: 1877px;
 }
 
+.bottom-brands-images {
+  width: 900px;
+  height: auto;
+  margin-left: 155px;
+  margin-top: 50px;
+}
+
 .footer {
   width: 100%;
   min-width: 1100px;
   height: 200px;
   position: absolute;
   top: 2177px;
-  background-color: black;
+  background-color: #080808;
 }
 
 .footer-logo {
