--- a/main.css
+++ b/main.css
@@ -1,30 +1,36 @@
 body {
   font-family: 'Roboto', sans-serif;
   letter-spacing: 1.3px;
-  font-weight: lighter;
   width: 100%;
 }
 
 h1 {
   font-size: 30px;
   color: #636363;
+  font-weight: 100;
 }
 
 h4 {
   font-size: 18px;
   line-height: 28px;
   color: #707070;
+  font-weight: 100;
 }
 
 button {
   font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  color: #707070;
+  font-style: bold;
+  font-size: 20px;
+  color: #636363;
   height: 43px;
   border: 1px solid #ccc;
   width: 150px;
   border-radius: 10px;
   padding-top: 5px;
+}
+
+button:focus {
+  outline:0;
 }
 
 input, input[list]::-webkit-input-placeholder {
@@ -95,6 +101,14 @@ input, input[list]:-ms-input-placeholder {
 .register button {
   margin: auto;
   background-color: white;
+  color: #080808;
+  border: 2px solid rgb(40, 141, 208);
+}
+
+button:active {
+  -moz-box-shadow:    inset 0 0 10px rgb(155,219,81);
+  -webkit-box-shadow: inset 0 0 10px rgb(155,219,81);
+  box-shadow:         inset 0 0 10px rgb(155,219,81);
 }
 
 
@@ -138,11 +152,10 @@ svg {
 }
 
 .mid-section-copy {
-  float: left;
   margin-left: 650px;
-  margin-top: 150px;
-  position: absolute;
   width: 400px;
+  position: absolute;
+  margin-top: 165px;
 }
 
 .bottom-banner {
@@ -167,15 +180,17 @@ svg {
   color: white;
   padding-left: 160px;
   line-height: 175px;
+  width: 70%;
 }
 
 .bottom-banner-logo {
   height: auto;
   width: 150px;
-  position: absolute;
   margin-left: 825px;
   margin-top: -155px;
+  float: left;
 }
+
 
 
 
